[gd_scene load_steps=17 format=3 uid="uid://bn8g7x356tl3q"]

[ext_resource type="Script" uid="uid://drb8020exidda" path="res://addons/plugin_devtools/src/tools_dock/editor_debugger/dock/EditorDebugger.gd" id="1_oq8x1"]
[ext_resource type="Script" uid="uid://cdci5v0ynrgjk" path="res://addons/plugin_devtools/src/tools_dock/editor_debugger/dock/EditorDebuggerPopupMenu.gd" id="2_hg6cs"]
[ext_resource type="Script" uid="uid://bh0onqu0jxa01" path="res://addons/plugin_devtools/src/tools_dock/editor_debugger/dock/EditorDebuggerTree.gd" id="3_4tiqm"]
[ext_resource type="Script" uid="uid://83yq2e5cupld" path="res://addons/plugin_devtools/src/controls/EditorIconButton.gd" id="3_gy50x"]

[sub_resource type="SVGTexture" id="SVGTexture_gy50x"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m8 9.669-3.536 2.583H7v2.537h2v-2.537h2.536zm0-3.314L4.464 3.772H7V1.235h2v2.537h2.536zm-7.296.73h14.591v1.831H.704z\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_g3pkk"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"5\" fill=\"none\" stroke=\"#8eef97\" stroke-width=\"2\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_tvlfb"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m2 2v2h2v-2zm4 0v2h8v-2zm-4 5v2h2v-2zm4 0v2h8v-2zm-4 5v2h2v-2zm4 0v2h8v-2z\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="GDScript" id="GDScript_hg6cs"]
script/source = "@tool
extends Label

func on_node_selected(node: Node) -> void:
	print(node)
	text = '%s:<%s#%s>' % [node.name, H.Scripts.get_class_name_or_script_name(node), node.get_instance_id()]
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fi71u"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.09068625, 0.09068625, 0.09068625, 1)
corner_detail = 1
anti_aliasing = false

[sub_resource type="SVGTexture" id="SVGTexture_hg6cs"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"M7 1a5 5 0 0 0-4 5h4zm2 0a5 5 0 0 1 4 5H9zM3 8v2a5 5 0 0 0 10 0V8z\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="GDScript" id="GDScript_g3pkk"]
script/source = "@tool
extends TextureRect

func _ready() -> void:
	texture.base_scale = EditorInterface.get_editor_scale()
"

[sub_resource type="GDScript" id="GDScript_4tiqm"]
script/source = "@tool
extends Container

@onready var viewport := get_viewport()

var xlabel := Label.new()
var ylabel := Label.new()

func _ready() -> void:
	add_child(xlabel)
	add_child(ylabel)

func _process(_delta: float) -> void:
	if is_part_of_edited_scene(): return
	var mouse_position := viewport.get_mouse_position()
	# text = str(viewport.get_mouse_position())
	#text = \"%d,%d\" % [mouse_position.x, mouse_position.y]
	xlabel.text = \"x: %d\" % mouse_position.x
	ylabel.text = \"y: %d\" % mouse_position.y
	var max_x_size : int = max(xlabel.size.x, ylabel.size.x)
	xlabel.custom_minimum_size.x = max_x_size
	ylabel.custom_minimum_size.x = max_x_size
	
"

[sub_resource type="GDScript" id="GDScript_8oa8k"]
script/source = "@tool
extends Label

func set_int(value: int) -> void:
	text = \"%d\" % value
"

[sub_resource type="SVGTexture" id="SVGTexture_8oa8k"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"5\" fill=\"none\" stroke=\"#919191\" stroke-width=\"2\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="SVGTexture" id="SVGTexture_4tiqm"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><circle cx=\"8\" cy=\"8\" r=\"5\" fill=\"none\" stroke=\"#e0e0e0\" stroke-width=\"2\"/></svg>
"
base_scale = 2.0
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(1, 0.87, 0.4, 1)
}

[sub_resource type="GDScript" id="GDScript_gy50x"]
script/source = "@tool
extends TextureProgressBar

func _ready() -> void:
	texture_progress.base_scale = EditorInterface.get_editor_scale()
	pivot_offset = size / 2

func _process(delta: float) -> void:
	pass
	# rotation += delta
"

[node name="EditorDebugger" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oq8x1")
metadata/_edit_lock_ = true

[node name="PopupMenu" type="PopupMenu" parent="."]
auto_translate_mode = 2
auto_translate = false
hide_on_item_selection = false
hide_on_checkable_item_selection = false
item_count = 3
item_0/text = "Save branch as scene"
item_0/id = 0
item_1/text = "Copy path to clipboard"
item_1/id = 1
item_2/text = "Copy typed path to clipboard"
item_2/id = 2
script = ExtResource("2_hg6cs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CollapseExceptSelected" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
tooltip_text = "Collapse tree except selected branch"
theme_type_variation = &"InspectorActionbutton"
theme_override_icons/icon = SubResource("SVGTexture_gy50x")
script = ExtResource("3_gy50x")
icon_name = "CollapseTree"

[node name="HighlightNodeCheckbox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Highlight selected Control node"
theme_type_variation = &"InspectorActionButton"
theme_override_icons/icon = SubResource("SVGTexture_g3pkk")
button_pressed = true
script = ExtResource("3_gy50x")
icon_name = "Control"
button_type = "InspectorActionButton"

[node name="ShowInInspectorCheckbox" type="CheckBox" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Show in Inspector"
theme_type_variation = &"InspectorActionButton"
theme_override_icons/icon = SubResource("SVGTexture_tvlfb")
script = ExtResource("3_gy50x")
icon_name = "FileList"
button_type = "InspectorActionButton"

[node name="GridContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = SubResource("GDScript_hg6cs")

[node name="Tree" type="Tree" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fi71u")
columns = 2
allow_rmb_select = true
select_mode = 1
script = ExtResource("3_4tiqm")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("SVGTexture_hg6cs")
stretch_mode = 3
script = SubResource("GDScript_g3pkk")

[node name="MousePositionLabel" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = SubResource("GDScript_4tiqm")

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UpdatedEntriesLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
script = SubResource("GDScript_8oa8k")

[node name="UpdateProgress" type="TextureProgressBar" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.2)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
max_value = 1.0
step = 0.0010000000038417
value = 0.38000000145984597
fill_mode = 4
texture_under = SubResource("SVGTexture_8oa8k")
texture_progress = SubResource("SVGTexture_4tiqm")
script = SubResource("GDScript_gy50x")

[node name="SaveBranchFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 2
auto_translate = false
filters = PackedStringArray("*.tscn ; TSCN", "*.scn ; SCN", "*.res ; RES")

[connection signal="node_selected" from="." to="VBoxContainer/GridContainer/Label" method="on_node_selected"]
[connection signal="save_branch_as_scene" from="PopupMenu" to="SaveBranchFileDialog" method="popup_centered_ratio"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CollapseExceptSelected" to="VBoxContainer/Tree" method="collapse_except_selected"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/HighlightNodeCheckbox" to="." method="highlight_checkbox_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer2/ShowInInspectorCheckbox" to="." method="inspection_checkbox_toggled"]
[connection signal="item_mouse_selected" from="VBoxContainer/Tree" to="." method="_on_Tree_item_mouse_selected"]
[connection signal="item_selected" from="VBoxContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/Tree" to="." method="_on_Tree_nothing_selected"]
[connection signal="updated_entries" from="VBoxContainer/Tree" to="VBoxContainer/HBoxContainer/UpdatedEntriesLabel" method="set_int"]
[connection signal="file_selected" from="SaveBranchFileDialog" to="." method="_on_SaveBranchFileDialog_file_selected"]
